force-app/main/default/objects/Volunteer_Board_Activity__c/Volunteer_Board_Activity__c.object-meta.xml
<CustomObject>
    <description>Child Record of Volunteer Activity object, to list date and name of board reporting activities.</description>
    <label>Volunteer Board Activity</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Volunteer Board Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Board Service Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>