force-app/main/default/objects/Volunteer_Board_Activity__c/fields/Board_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Board_Activity_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date of Board Activitiy</inlineHelpText>
    <label>Board Activity Date</label>
    <type>Date</type>
</CustomField>