force-app/main/default/objects/Volunteer_Board_Activity__c/fields/Volunteer_Activity__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Activity__c</fullName>
    <label>Volunteer Activity</label>
    <referenceTo>Volunteer_Activity__c</referenceTo>
    <relationshipLabel>Board Service Activities</relationshipLabel>
    <relationshipName>Board_Service_Activities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>